<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/status_padding"
        android:background="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/connectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_disconnected"
            android:textSize="@dimen/status_text_size"
            android:textColor="#666666" />

        <TextView
            android:id="@+id/connectedDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_device_connected"
            android:textSize="@dimen/status_text_size"
            android:textColor="#666666"
            android:layout_marginTop="@dimen/status_margin" />

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_for_devices"
            android:layout_marginTop="@dimen/input_margin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/status_padding"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/statusLayout"
        app:layout_constraintBottom_toTopOf="@id/inputLayout" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/input_padding"
        android:background="#FFFFFF"
        android:elevation="@dimen/input_elevation"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_type_message"
            android:padding="@dimen/input_padding"
            android:background="@null"
            android:maxLines="4"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:enabled="false"
            android:layout_marginStart="@dimen/input_margin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
